interpreteur.output
Grammaire

    0 $accept: instructions $end

    1 instructions: instr1 instructions
    2             | instr2 instructions
    3             | instr3 instructions
    4             | %empty

    5 instr1: tADD tNB tNB tNB
    6       | tMUL tNB tNB tNB
    7       | tSOU tNB tNB tNB
    8       | tDIV tNB tNB tNB
    9       | tEQU tNB tNB tNB
   10       | tINF tNB tNB tNB
   11       | tINFE tNB tNB tNB
   12       | tSUP tNB tNB tNB
   13       | tSUPE tNB tNB tNB

   14 instr2: tCOP tNB tNB
   15       | tAFC tNB tNB
   16       | tLOAD tNB tNB
   17       | tSTORE tNB tNB
   18       | tJMPC tNB tNB

   19 instr3: tJMP tNB


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tADD (258) 5
tMUL (259) 6
tSOU (260) 7
tDIV (261) 8
tCOP (262) 14
tAFC (263) 15
tLOAD (264) 16
tSTORE (265) 17
tEQU (266) 9
tINF (267) 10
tINFE (268) 11
tSUP (269) 12
tSUPE (270) 13
tJMP (271) 19
tJMPC (272) 18
tNB (273) 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19


Non-terminaux, suivis des règles où ils apparaissent

$accept (19)
    à gauche: 0
instructions (20)
    à gauche: 1 2 3 4, à droite: 0 1 2 3
instr1 (21)
    à gauche: 5 6 7 8 9 10 11 12 13, à droite: 1
instr2 (22)
    à gauche: 14 15 16 17 18, à droite: 2
instr3 (23)
    à gauche: 19, à droite: 3


État 0

    0 $accept: . instructions $end

    tADD    décalage et aller à l'état 1
    tMUL    décalage et aller à l'état 2
    tSOU    décalage et aller à l'état 3
    tDIV    décalage et aller à l'état 4
    tCOP    décalage et aller à l'état 5
    tAFC    décalage et aller à l'état 6
    tLOAD   décalage et aller à l'état 7
    tSTORE  décalage et aller à l'état 8
    tEQU    décalage et aller à l'état 9
    tINF    décalage et aller à l'état 10
    tINFE   décalage et aller à l'état 11
    tSUP    décalage et aller à l'état 12
    tSUPE   décalage et aller à l'état 13
    tJMP    décalage et aller à l'état 14
    tJMPC   décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 4 (instructions)

    instructions  aller à l'état 16
    instr1        aller à l'état 17
    instr2        aller à l'état 18
    instr3        aller à l'état 19


État 1

    5 instr1: tADD . tNB tNB tNB

    tNB  décalage et aller à l'état 20


État 2

    6 instr1: tMUL . tNB tNB tNB

    tNB  décalage et aller à l'état 21


État 3

    7 instr1: tSOU . tNB tNB tNB

    tNB  décalage et aller à l'état 22


État 4

    8 instr1: tDIV . tNB tNB tNB

    tNB  décalage et aller à l'état 23


État 5

   14 instr2: tCOP . tNB tNB

    tNB  décalage et aller à l'état 24


État 6

   15 instr2: tAFC . tNB tNB

    tNB  décalage et aller à l'état 25


État 7

   16 instr2: tLOAD . tNB tNB

    tNB  décalage et aller à l'état 26


État 8

   17 instr2: tSTORE . tNB tNB

    tNB  décalage et aller à l'état 27


État 9

    9 instr1: tEQU . tNB tNB tNB

    tNB  décalage et aller à l'état 28


État 10

   10 instr1: tINF . tNB tNB tNB

    tNB  décalage et aller à l'état 29


État 11

   11 instr1: tINFE . tNB tNB tNB

    tNB  décalage et aller à l'état 30


État 12

   12 instr1: tSUP . tNB tNB tNB

    tNB  décalage et aller à l'état 31


État 13

   13 instr1: tSUPE . tNB tNB tNB

    tNB  décalage et aller à l'état 32


État 14

   19 instr3: tJMP . tNB

    tNB  décalage et aller à l'état 33


État 15

   18 instr2: tJMPC . tNB tNB

    tNB  décalage et aller à l'état 34


État 16

    0 $accept: instructions . $end

    $end  décalage et aller à l'état 35


État 17

    1 instructions: instr1 . instructions

    tADD    décalage et aller à l'état 1
    tMUL    décalage et aller à l'état 2
    tSOU    décalage et aller à l'état 3
    tDIV    décalage et aller à l'état 4
    tCOP    décalage et aller à l'état 5
    tAFC    décalage et aller à l'état 6
    tLOAD   décalage et aller à l'état 7
    tSTORE  décalage et aller à l'état 8
    tEQU    décalage et aller à l'état 9
    tINF    décalage et aller à l'état 10
    tINFE   décalage et aller à l'état 11
    tSUP    décalage et aller à l'état 12
    tSUPE   décalage et aller à l'état 13
    tJMP    décalage et aller à l'état 14
    tJMPC   décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 4 (instructions)

    instructions  aller à l'état 36
    instr1        aller à l'état 17
    instr2        aller à l'état 18
    instr3        aller à l'état 19


État 18

    2 instructions: instr2 . instructions

    tADD    décalage et aller à l'état 1
    tMUL    décalage et aller à l'état 2
    tSOU    décalage et aller à l'état 3
    tDIV    décalage et aller à l'état 4
    tCOP    décalage et aller à l'état 5
    tAFC    décalage et aller à l'état 6
    tLOAD   décalage et aller à l'état 7
    tSTORE  décalage et aller à l'état 8
    tEQU    décalage et aller à l'état 9
    tINF    décalage et aller à l'état 10
    tINFE   décalage et aller à l'état 11
    tSUP    décalage et aller à l'état 12
    tSUPE   décalage et aller à l'état 13
    tJMP    décalage et aller à l'état 14
    tJMPC   décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 4 (instructions)

    instructions  aller à l'état 37
    instr1        aller à l'état 17
    instr2        aller à l'état 18
    instr3        aller à l'état 19


État 19

    3 instructions: instr3 . instructions

    tADD    décalage et aller à l'état 1
    tMUL    décalage et aller à l'état 2
    tSOU    décalage et aller à l'état 3
    tDIV    décalage et aller à l'état 4
    tCOP    décalage et aller à l'état 5
    tAFC    décalage et aller à l'état 6
    tLOAD   décalage et aller à l'état 7
    tSTORE  décalage et aller à l'état 8
    tEQU    décalage et aller à l'état 9
    tINF    décalage et aller à l'état 10
    tINFE   décalage et aller à l'état 11
    tSUP    décalage et aller à l'état 12
    tSUPE   décalage et aller à l'état 13
    tJMP    décalage et aller à l'état 14
    tJMPC   décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 4 (instructions)

    instructions  aller à l'état 38
    instr1        aller à l'état 17
    instr2        aller à l'état 18
    instr3        aller à l'état 19


État 20

    5 instr1: tADD tNB . tNB tNB

    tNB  décalage et aller à l'état 39


État 21

    6 instr1: tMUL tNB . tNB tNB

    tNB  décalage et aller à l'état 40


État 22

    7 instr1: tSOU tNB . tNB tNB

    tNB  décalage et aller à l'état 41


État 23

    8 instr1: tDIV tNB . tNB tNB

    tNB  décalage et aller à l'état 42


État 24

   14 instr2: tCOP tNB . tNB

    tNB  décalage et aller à l'état 43


État 25

   15 instr2: tAFC tNB . tNB

    tNB  décalage et aller à l'état 44


État 26

   16 instr2: tLOAD tNB . tNB

    tNB  décalage et aller à l'état 45


État 27

   17 instr2: tSTORE tNB . tNB

    tNB  décalage et aller à l'état 46


État 28

    9 instr1: tEQU tNB . tNB tNB

    tNB  décalage et aller à l'état 47


État 29

   10 instr1: tINF tNB . tNB tNB

    tNB  décalage et aller à l'état 48


État 30

   11 instr1: tINFE tNB . tNB tNB

    tNB  décalage et aller à l'état 49


État 31

   12 instr1: tSUP tNB . tNB tNB

    tNB  décalage et aller à l'état 50


État 32

   13 instr1: tSUPE tNB . tNB tNB

    tNB  décalage et aller à l'état 51


État 33

   19 instr3: tJMP tNB .

    $défaut  réduction par utilisation de la règle 19 (instr3)


État 34

   18 instr2: tJMPC tNB . tNB

    tNB  décalage et aller à l'état 52


État 35

    0 $accept: instructions $end .

    $défaut  accepter


État 36

    1 instructions: instr1 instructions .

    $défaut  réduction par utilisation de la règle 1 (instructions)


État 37

    2 instructions: instr2 instructions .

    $défaut  réduction par utilisation de la règle 2 (instructions)


État 38

    3 instructions: instr3 instructions .

    $défaut  réduction par utilisation de la règle 3 (instructions)


État 39

    5 instr1: tADD tNB tNB . tNB

    tNB  décalage et aller à l'état 53


État 40

    6 instr1: tMUL tNB tNB . tNB

    tNB  décalage et aller à l'état 54


État 41

    7 instr1: tSOU tNB tNB . tNB

    tNB  décalage et aller à l'état 55


État 42

    8 instr1: tDIV tNB tNB . tNB

    tNB  décalage et aller à l'état 56


État 43

   14 instr2: tCOP tNB tNB .

    $défaut  réduction par utilisation de la règle 14 (instr2)


État 44

   15 instr2: tAFC tNB tNB .

    $défaut  réduction par utilisation de la règle 15 (instr2)


État 45

   16 instr2: tLOAD tNB tNB .

    $défaut  réduction par utilisation de la règle 16 (instr2)


État 46

   17 instr2: tSTORE tNB tNB .

    $défaut  réduction par utilisation de la règle 17 (instr2)


État 47

    9 instr1: tEQU tNB tNB . tNB

    tNB  décalage et aller à l'état 57


État 48

   10 instr1: tINF tNB tNB . tNB

    tNB  décalage et aller à l'état 58


État 49

   11 instr1: tINFE tNB tNB . tNB

    tNB  décalage et aller à l'état 59


État 50

   12 instr1: tSUP tNB tNB . tNB

    tNB  décalage et aller à l'état 60


État 51

   13 instr1: tSUPE tNB tNB . tNB

    tNB  décalage et aller à l'état 61


État 52

   18 instr2: tJMPC tNB tNB .

    $défaut  réduction par utilisation de la règle 18 (instr2)


État 53

    5 instr1: tADD tNB tNB tNB .

    $défaut  réduction par utilisation de la règle 5 (instr1)


État 54

    6 instr1: tMUL tNB tNB tNB .

    $défaut  réduction par utilisation de la règle 6 (instr1)


État 55

    7 instr1: tSOU tNB tNB tNB .

    $défaut  réduction par utilisation de la règle 7 (instr1)


État 56

    8 instr1: tDIV tNB tNB tNB .

    $défaut  réduction par utilisation de la règle 8 (instr1)


État 57

    9 instr1: tEQU tNB tNB tNB .

    $défaut  réduction par utilisation de la règle 9 (instr1)


État 58

   10 instr1: tINF tNB tNB tNB .

    $défaut  réduction par utilisation de la règle 10 (instr1)


État 59

   11 instr1: tINFE tNB tNB tNB .

    $défaut  réduction par utilisation de la règle 11 (instr1)


État 60

   12 instr1: tSUP tNB tNB tNB .

    $défaut  réduction par utilisation de la règle 12 (instr1)


État 61

   13 instr1: tSUPE tNB tNB tNB .

    $défaut  réduction par utilisation de la règle 13 (instr1)
